--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,3 +1,19 @@
+<mat-card>
+    <mat-card-content>
+        <table>
+            <tr>
+                <th>Name</th>
+                <th>ZIP Code</th>
+                <th>City</th>
+            </tr>
+            <tr *ngFor="let item of item$ | async">
+                <td>{{ item.firstName }} {{ item.lastName }}</td>
+                <td>{{ item.zipCode }}</td>
+                <td>{{ item.city }}</td>
+            </tr>
+        </table>
+    </mat-card-content>
+</mat-card>
 <button (click)="openDialog()" class="add-user-button" mat-fab color="primary" aria-label="Example icon button with a delete icon" matTooltip="Add User" matTooltipPosition="above">
     <mat-icon>add</mat-icon>
 </button>
