--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -1,5 +1,44 @@
+mat-card-content {
+    padding-left: 0;
+    padding-right: 0;
+}
 .add-user-button {
     position: absolute;
     bottom: 56px;
     right: 56px;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    tr {
+        border-bottom: 1px solid rgba($color: #000000, $alpha: 0.3);
+        &:last-child {
+            border-bottom: 0;
+        } 
+        &:hover {
+            background-color: rgb(245, 245, 245);
+            &:first-child {
+                background-color: white !important;
+            }
+        }
+    }
+
+    td {
+        height: 48px;
+        &:first-child {
+            padding-left: 16px;
+        }
+        cursor: pointer;
+    }
+
+    th {
+        text-align: start;
+        color: rgba($color: #000000, $alpha: 0.4);
+        font-size: 14px;
+        font-weight: 500;
+        &:first-child {
+            padding-left: 16px;
+        }
+    }
 }
