--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <mat-drawer-container class="mat-drawer-container" autosize>
   <mat-drawer #drawer class="sidenav" [opened]="true" mode="side">
     <div class="logo-container">
-      LOGO EINFÜGEN
+      <img class="logo" src="assets/img/logo.png">
     </div>
     <ul class="menu-items">
       <li routerLink="/"><mat-icon>fact_check</mat-icon>Dashboard</li>
@@ -10,10 +10,9 @@
   </mat-drawer>
 
   <div class="example-sidenav-content">
-    <mat-toolbar color="primary">
+    <mat-toolbar>
       <mat-toolbar-row>
         <mat-icon class="menu-icon" (click)="drawer.toggle()">menu</mat-icon>
-        <span>Simple CRM</span>
       </mat-toolbar-row>
     </mat-toolbar>
     <div class="router-container">
