--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,6 +4,12 @@
 
 .menu-icon {
     cursor: pointer;
+    color: white;
+    transform: scale(1.5);
+    &:hover {
+        opacity: 0.8;
+        transform: scale(1.4);
+    }
 }
 
 .menu-items {
@@ -44,12 +50,17 @@
     display: flex;
     align-items: center;
     border-bottom: 1px solid rgba($color: #000000, $alpha: 0.25);
-    padding-left: 16px;
-    padding-right: 16px;
     min-height: 56px;
 }
 
+.logo {
+    height: 56px;
+    object-position: center;
+    overflow: hidden;
+}
+
 mat-toolbar, mat-toolbar-row {
+    background-color: #141D37;
     min-height: 56px;
     height: 56px;
 }
