--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -1,5 +1,11 @@
 <mat-card class="user-detail-header">
     <mat-card-content class="user-detail-card">
+        <button mat-icon-button [matMenuTriggerFor]="menuHeader" class="button-position">
+            <mat-icon>app_registration</mat-icon>
+        </button>
+        <mat-menu #menuHeader="matMenu" xPosition="before">
+            <button mat-menu-item (click)="editUserHeader()">Edit</button>
+        </mat-menu>
         <img src="assets/img/profile1.png">
         <div class="user-details">
             <h2>{{ user.firstName }} {{ user.lastName }}</h2>
@@ -11,7 +17,14 @@
 <mat-card class="mt-32">
     <mat-card-header>
         <mat-card-title>Address</mat-card-title>
+        <button mat-icon-button [matMenuTriggerFor]="menu">
+            <mat-icon>app_registration</mat-icon>
+        </button>
+        <mat-menu #menu="matMenu"  xPosition="before">
+            <button mat-menu-item (click)="editUserComponent()">Edit</button>
+        </mat-menu>
     </mat-card-header>
+    
     <mat-card-content>
         {{ user.street }} <br>
         {{ user.zipCode }} {{ user.city }}
