--- a/src/app/user-detail/user-detail.component.scss
+++ b/src/app/user-detail/user-detail.component.scss
@@ -1,5 +1,7 @@
 .user-detail-header {
     background-color: #03B5C1;
+    position: relative;
+
 }
 
 .user-detail-card {
@@ -27,4 +29,16 @@
     h2 {
         margin-bottom: 0;
     }
+}
+
+mat-card-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.button-position {
+    position: absolute;
+    top: 16px;
+    right: 16px;
 }
