--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -1,4 +1,7 @@
 <mat-card class="user-detail-header">
+
+    <img class="background-img" src="{{ user.img }}">
+
     <mat-card-content class="user-detail-card">
         <button mat-icon-button [matMenuTriggerFor]="menuHeader" class="button-position">
             <mat-icon>app_registration</mat-icon>
