--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -14,6 +14,6 @@
         </table>
     </mat-card-content>
 </mat-card>
-<button (click)="openDialog()" class="add-user-button" mat-fab color="primary" aria-label="Example icon button with a delete icon" matTooltip="Add User" matTooltipPosition="above">
+<button (click)="openDialog()" class="add-button" mat-fab color="primary" aria-label="Example icon button with a delete icon" matTooltip="Add User" matTooltipPosition="above">
     <mat-icon>add</mat-icon>
 </button>
