--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,9 @@
       <img class="logo" src="assets/img/logo.png">
     </div>
     <ul class="menu-items">
-      <li routerLink="/"><mat-icon>fact_check</mat-icon>Dashboard</li>
-      <li routerLink="/user"><mat-icon>perm_identity</mat-icon>User</li>
+      <li routerLink="/" (click)="changeHeader('Dashboard')"><mat-icon>fact_check</mat-icon>Dashboard</li>
+      <li routerLink="/user" (click)="changeHeader('User')"><mat-icon>perm_identity</mat-icon>User</li>
+      <li routerLink="/deals" (click)="changeHeader('Deals')"><mat-icon>perm_identity</mat-icon>Deals</li>
     </ul>
   </mat-drawer>
 
@@ -13,6 +14,7 @@
     <mat-toolbar>
       <mat-toolbar-row>
         <mat-icon class="menu-icon" (click)="drawer.toggle()">menu</mat-icon>
+        <span>{{ subPage }}</span>
       </mat-toolbar-row>
     </mat-toolbar>
     <div class="router-container">
