--- a/src/app/user-detail/user-detail.component.scss
+++ b/src/app/user-detail/user-detail.component.scss
@@ -1,7 +1,7 @@
 .user-detail-header {
     background-color: #03B5C1;
+    opacity: 0.7;
     position: relative;
-
 }
 
 .user-detail-card {
@@ -29,6 +29,16 @@
     h2 {
         margin-bottom: 0;
     }
+}
+
+.background-img {
+    position: absolute;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    border-radius: 5px;
+    object-fit: cover;
+    z-index: -1;
 }
 
 mat-card-header {
