--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -2,11 +2,6 @@ mat-card-content {
     padding-left: 0;
     padding-right: 0;
 }
-.add-user-button {
-    position: absolute;
-    bottom: 56px;
-    right: 56px;
-}
 
 table {
     width: 100%;
@@ -41,4 +36,10 @@ table {
             padding-left: 16px;
         }
     }
+}
+
+.add-button {
+    position: absolute;
+    bottom: 56px;
+    right: 56px;
 }
