--- a/src/app/deals/deals.component.html
+++ b/src/app/deals/deals.component.html
@@ -1,8 +1,18 @@
 <h2>Deals Started</h2>
 <div class="deals-container">
-    <mat-card *ngFor="let deal of deals$ | async" routerLink="{{ deal.id }}">
+    <mat-card *ngFor="let deal of deals$ | async">
         <mat-card-content>
-            <h2>{{ deal.topic }}</h2>
+            <div class="card-header">
+                <h2>{{ deal.topic }}</h2>
+                <button mat-icon-button [matMenuTriggerFor]="menu">
+                    <mat-icon>more_vert</mat-icon>
+                </button>
+                <mat-menu #menu="matMenu" xPosition="before">
+                    <button mat-menu-item>Edit</button>
+                    <button mat-menu-item (click)="dealDone(deal, deal.id)">Done</button>
+                    <button mat-menu-item (click)="deleteDeal('deals', deal.id)">Delete</button>
+                </mat-menu>
+            </div>
             <table>
                 <tr>
                     <td>Name:</td>
@@ -21,9 +31,38 @@
     </mat-card>
 
 </div>
-<h2>Deals Completed</h2>
-<div class="deals-container"></div>
 
-<button (click)="openDialog()" class="add-button" mat-fab color="primary" aria-label="Example icon button with a delete icon" matTooltip="New Deal" matTooltipPosition="above">
+
+<h2>Deals Completed</h2>
+
+<div class="deals-container">
+    <mat-card *ngFor="let doneDeal of doneDeals$ | async">
+        <mat-card-content>
+            <div class="card-header">
+                <h2>{{ doneDeal.topic }}</h2>
+                <button mat-icon-button (click)="deleteDeal('done-deals', doneDeal.id)">
+                    <mat-icon>delete</mat-icon>
+                </button>
+            </div>
+            <table>
+                <tr>
+                    <td>Name:</td>
+                    <td>{{ doneDeal.firstName }} {{ doneDeal.lastName }}</td>
+                </tr>
+                <tr>
+                    <td>Email:</td>
+                    <td>{{ doneDeal.email }}</td>
+                </tr>
+                <tr>
+                    <td>Amount:</td>
+                    <td>{{ doneDeal.amount }}€</td>
+                </tr>
+            </table>
+        </mat-card-content>
+    </mat-card>
+</div>
+
+<button (click)="openDialog()" class="add-button" mat-fab color="primary"
+    aria-label="Example icon button with a delete icon" matTooltip="New Deal" matTooltipPosition="above">
     <mat-icon>add</mat-icon>
 </button>
