--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
     <ul class="menu-items">
       <li routerLink="/" (click)="changeHeader('Dashboard')"><mat-icon>fact_check</mat-icon>Dashboard</li>
       <li routerLink="/user" (click)="changeHeader('User')"><mat-icon>perm_identity</mat-icon>User</li>
-      <li routerLink="/deals" (click)="changeHeader('Deals')"><mat-icon>perm_identity</mat-icon>Deals</li>
+      <li routerLink="/deals" (click)="changeHeader('Deals')"><mat-icon>currency_exchange</mat-icon>Deals</li>
     </ul>
   </mat-drawer>
 
