--- a/src/app/deals/deals.component.scss
+++ b/src/app/deals/deals.component.scss
@@ -1,6 +1,15 @@
 .deals-container {
     display: flex;
     flex-wrap: wrap;
+    padding-top: 16px;
+    padding-bottom: 16px;
+}
+
+.card-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 32px;
 }
 
 .add-button {
@@ -11,4 +20,10 @@
 
 mat-card {
     width: fit-content;
+    margin-bottom: 8px;
+    margin-right: 8px;
+}
+
+h2 {
+    margin: 0;
 }
