--- a/src/app/deals/deals.component.html
+++ b/src/app/deals/deals.component.html
@@ -8,7 +8,7 @@
                     <mat-icon>more_vert</mat-icon>
                 </button>
                 <mat-menu #menu="matMenu" xPosition="before">
-                    <button mat-menu-item>Edit</button>
+                    <button mat-menu-item (click)="editDeal(deal, deal.id)">Edit</button>
                     <button mat-menu-item (click)="dealDone(deal, deal.id)">Done</button>
                     <button mat-menu-item (click)="deleteDeal('deals', deal.id)">Delete</button>
                 </mat-menu>
