--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,12 @@
-<p>dashboard works!</p>
+<div class="headline">
+    <mat-icon>currency_exchange</mat-icon>
+    <h2>Achieved monthly revenue</h2>
+</div>
+<div style="display: block;">
+    <canvas class="revenue-chart" baseChart
+      [type]="'line'"
+      [data]="lineChartData"
+      [options]="lineChartOptions"
+      [legend]="lineChartLegend">
+    </canvas>
+</div>
