--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,9 @@
     </div>
     <ul class="menu-items">
       <li [class.dark]="dashboardSelected" routerLink="/dashboard" (click)="changeHeader('Dashboard')"><mat-icon>fact_check</mat-icon>Dashboard</li>
-      <li [class.dark]="userSelected" routerLink="/" (click)="changeHeader('User')"><mat-icon>perm_identity</mat-icon>User</li>
+      <li [class.dark]="userSelected" routerLink="/user" (click)="changeHeader('User')"><mat-icon>perm_identity</mat-icon>User</li>
       <li [class.dark]="dealsSelected" routerLink="/deals" (click)="changeHeader('Deals')"><mat-icon>currency_exchange</mat-icon>Deals</li>
+      <li [class.dark]="newsSelected" routerLink="/news" (click)="changeHeader('News')"><mat-icon>newspaper</mat-icon>News</li>
     </ul>
   </mat-drawer>
 
