--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -21,7 +21,7 @@
         <h2>Deals Started</h2>
       </div>
       <span>this year</span>
-      <canvas baseChart [data]="barChartDataDealsStarted" [options]="barChartOptionsDealsStarted"
+      <canvas height="300" baseChart [data]="barChartDataDealsStarted" [options]="barChartOptionsDealsStarted"
         [legend]="barChartLegendDealsStarted" [type]="'bar'">
       </canvas>
     </mat-card-content>
@@ -34,7 +34,7 @@
         <h2>Activities Completed</h2>
       </div>
       <span>this year</span>
-      <canvas baseChart [data]="barChartDataDealsDone" [options]="barChartOptionsDealsDone"
+      <canvas height="300" baseChart [data]="barChartDataDealsDone" [options]="barChartOptionsDealsDone"
         [legend]="barChartLegendDealsDone" [type]="'bar'">
       </canvas>
     </mat-card-content>
