--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -6,6 +6,7 @@
 .graph-container {
     display: flex;
     gap: 16px;
+    margin-bottom: 32px;
 }
 
 .mb-16 {
@@ -14,7 +15,6 @@
 
 .deals-chart {
     width: 50%;
-    height: auto;
     span {
         padding-top: 8px;
         padding-bottom: 16px;
