--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -1,7 +1,7 @@
 <h2>Get your daily News</h2>
 <div class="news-container">
     <mat-card *ngFor="let article of articles" class="article-container">
-        <mat-card-content *ngIf="!article['description'].includes('http')">
+        <mat-card-content *ngIf="article['description'] != null && !article['description'].includes('http')">
             <h3><b>{{ article['title'] }}</b></h3>
             <img src="{{ article['urlToImage'] }}">
             <span *ngIf="article['author'] != null"><i>Author: {{ article['author'] }}</i></span>
