--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -7,6 +7,10 @@
     display: flex;
     gap: 16px;
     margin-bottom: 32px;
+
+    @media (max-width: 900px) {
+        flex-direction: column;
+    }
 }
 
 .mb-16 {
@@ -19,6 +23,10 @@
         padding-top: 8px;
         padding-bottom: 16px;
         color: rgb(158, 158, 158);
+    }
+
+    @media (max-width: 900px) {
+        width: 100%;
     }
 }
 
