--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,5 +1,5 @@
 <mat-drawer-container class="mat-drawer-container" autosize>
-    <mat-drawer #drawer class="sidenav" [opened]="true" mode="side">
+    <mat-drawer #drawer class="sidenav desktop" [opened]="true" mode="side">
       <div class="logo-container">
         <img class="logo" src="assets/img/logo.png">
       </div>
@@ -12,12 +12,26 @@
     </mat-drawer>
   
     <div class="example-sidenav-content">
-      <mat-toolbar>
+      <mat-toolbar class="desktop">
         <mat-toolbar-row>
           <mat-icon class="menu-icon" (click)="drawer.toggle()">menu</mat-icon>
           <span>{{ subPage }}</span>
         </mat-toolbar-row>
       </mat-toolbar>
+      <div class="mobile">
+        <mat-toolbar>
+          <mat-toolbar-row>
+            <mat-icon class="menu-icon" [matMenuTriggerFor]="menuMobile">menu</mat-icon>
+            <mat-menu #menuMobile="matMenu">
+              <button mat-menu-item routerLink="/dashboard" (click)="changeHeader('Dashboard')">Dashboard</button>
+              <button mat-menu-item routerLink="/user" (click)="changeHeader('User')">User</button>
+              <button mat-menu-item routerLink="/deals" (click)="changeHeader('Deals')">Deals</button>
+              <button mat-menu-item routerLink="/news" (click)="changeHeader('News')">News</button>
+            </mat-menu>
+            <span>{{ subPage }}</span>
+          </mat-toolbar-row>
+        </mat-toolbar>
+      </div>
       <div class="router-container">
         <router-outlet></router-outlet>
       </div>
