--- a/src/app/main-page/main-page.component.scss
+++ b/src/app/main-page/main-page.component.scss
@@ -55,8 +55,13 @@
     padding-left: 56px;
     padding-right: 56px;
     padding-top: 16px;
-}
 
+    @media (max-width: 900px) {
+        padding-left: 16px;
+        padding-right: 16px;
+        padding-top: 70px;
+    }
+}
 
 .sidenav {
     width: 300px;
@@ -80,4 +85,21 @@ mat-toolbar-row {
     background-color: #141D37;
     min-height: 56px;
     height: 56px;
+}
+
+.mobile {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 3;
+    @media (min-width: 901px) {
+        display: none;
+    }
+}
+
+.desktop {
+    @media (max-width: 900px) {
+        display: none;
+    }
 }
