--- a/src/app/news/news.component.scss
+++ b/src/app/news/news.component.scss
@@ -6,7 +6,7 @@
 
 .article-container {
     margin-bottom: 8px;
-    max-width: 400px;
+    max-width: 350px;
     img{
         height: 200px;
         width: auto;
@@ -16,5 +16,15 @@
         display: flex;
         flex-direction: column;
         gap: 8px;
+    }
+
+    @media (max-width: 1150px) {
+        max-width: unset;
+        width: calc(50% - 8px);
+    }
+
+    @media (max-width: 600px) {
+        max-width: unset;
+        width: 100%;
     }
 }
