--- a/src/app/deals/deals.component.html
+++ b/src/app/deals/deals.component.html
@@ -62,7 +62,6 @@
     </mat-card>
 </div>
 
-<button (click)="openDialog()" class="add-button" mat-fab color="primary"
-    aria-label="Example icon button with a delete icon" matTooltip="New Deal" matTooltipPosition="above">
+<button (click)="openDialog()" class="add-button" mat-fab color="primary" matTooltip="New Deal" matTooltipPosition="above">
     <mat-icon>add</mat-icon>
 </button>
