--- a/src/app/dialog-edit-user/dialog-edit-user.component.html
+++ b/src/app/dialog-edit-user/dialog-edit-user.component.html
@@ -26,6 +26,7 @@
             <mat-datepicker #picker1 [startAt]="startDate"></mat-datepicker>
         </mat-form-field>
     </div>
+    <mat-label *ngIf="inputMissing" class="user-alert">Please fill out all fields!</mat-label>
 </div>
 <div mat-dialog-actions>
     <button [disabled]="loading" mat-button [mat-dialog-close]>Cancel</button>
